# go4ride

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.cursor/plans/: python_rider_backend_001467ae.plan.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_mock_driver.py  003_phase2_rider_features.py  004_driver_phase2.py  005_driver_vehicle_onboarding.py  006_route_polyline.py  007_driver_onboarding_v2.py  008_driver_analytics.py  009_ride_fk_cascade.py  010_us_localization.py
app/: main.py
app/core/: config.py  deps.py  exception_handlers.py  exceptions.py  logging.py  openapi.py  redis.py  security.py
app/db/: clear_otp_limits.py  clear_rides.py  (+2 more)
docs/: API.md  API_endpoints.md  DEPLOY.md  DRIVER_UI_INTEGRATION.md  RIDER_UI_INTEGRATION.md  booking_flow_api.csv  booking_flow_ws.drawio  fare_quote_visualizer.html  openapi.json
scripts/: demo.py  demo_menu.py  demo_session.py  demo_tui.py  dev.sh  export_openapi.py  manual_driver_ride_test.sh  phase1_demo.ipynb  phase1_demo.py  phase1_demo_menu.py  phase1_demo_tui.py  test_google_maps_key.py
tests/: api_helpers.py  conftest.py  test_admin_driver_kyc.py  test_api_envelope.py  test_clear_otp_limits.py  test_clear_rides.py  test_driver_analytics.py  test_driver_api_envelope.py  test_driver_earnings_service.py  test_driver_ride_search.py  test_fare_service.py  test_geo_service.py  test_insights_service.py  test_phase2_features.py  test_ride_lifecycle.py  test_ride_live.py  test_ride_quote.py  test_rider_start_otp.py  test_websocket_broadcast.py
(+77 files in other folders)
